# autobox-engine

./: .codecov.yml  .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.dev  LLM_PROVIDERS.md  README.md  codecov.yml  coverage.xml  docker-compose.yml  eslint.config.js  eslint.config.mjs  jest.config.js  main.py  package.json  pyproject.toml  tsconfig.json
.github/workflows/: tests.yml
.serena/: project.yml
autobox/: cli.py  main.py  server.py
autobox/actor/: manager.py
autobox/api/: __init__.py  app.py  background.py  background_process.py  cache_manager.py  middleware.py
autobox/api/routes/: __init__.py  health.py  instructions.py  simulation.py
autobox/bootstrap/: evaluator.py  id.py  metrics.py  orchestrator.py  planner.py  reporter.py  simulator.py  worker.py
autobox/cache/: manager.py  metrics.py  simulation.py  traces.py
autobox/config/: cli.py  loader.py
autobox/core/: cache.py  runner.py  simulation.py  simulator.py  status_manager.py
autobox/core/agents/: base.py  evaluator.py  monitor.py  orchestrator.py  planner.py  reporter.py  worker.py
autobox/exception/: simulation.py
autobox/logging/: banner.py  logger.py
autobox/schemas/: actor.py  ai.py  cache.py  config.py  instruction.py  memory.py  message.py  metrics.py  planner.py  simulation.py  status.py  traces.py
autobox/transformation/: status.py
autobox/utils/: name_sanitizer.py
examples/metrics/: crime_detective.json  gift_choice_3.json  summer_vacation.json
examples/server/: default.json  exit_on_completion.json  server.json
examples/simulations/: crime_detective.json  gift_choice.json  gift_choice_2.json  gift_choice_3.json  nordic_team.json  summer_vacation.json
src/: cli.ts  index.ts  runner.ts
src/clients/: index.ts  redis.ts
src/config/: constants.ts  env.ts  index.ts  loader.ts  logger.ts  metrics.ts  queue.ts  redis.ts
src/exceptions/: index.ts
src/messaging/: index.ts  messageBroker.ts
src/middlewares/: asyncHandler.ts  authenticate.ts  errorHandler.ts  index.ts  requestMetrics.ts  responseHandler.ts  validateRequest.ts
src/schemas/: index.ts
src/swagger/: apiSpec.ts  generateSwagger.ts  index.ts  openApiRegistry.ts
src/transformations/: index.ts  memoryToHistory.ts
src/types/: express.d.ts  ioredis-timeout.d.ts
src/utils/: index.ts  logger.ts  zodParse.ts
tests/: README.md  conftest.py  globalSetup.ts  setup.ts  test_shutdown_fix.py
tests/agents/: test_orchestrator.py  test_worker.py
tests/api/: test_abort.py  test_instructions.py  test_simple_health.py
tests/config/: test_loader.py
tests/core/: test_shutdown.py  test_simulator.py
tests/fixtures/: configs.ts  messages.ts
tests/integration/: test_simulation_flow.py
tests/schemas/: test_actor.py  test_message.py
tests/utils/: test_name_sanitizer.py
(+97 files in other folders)
