[project]
name = "autobox-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.99.9",
    "requests>=2.32.4",
    "thespian>=4.0.1",
]

[project.scripts]
autobox = "autobox.cli:main"
autobox-safe = "autobox.cli:run_with_env"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]